--- a/sample/css/main.css
+++ b/sample/css/main.css
@@ -3,3 +3,68 @@
 	margin: 0;
 	padding: 0;
 }
+.mixed {
+	/* -webkit-text-orientation: mixed; */
+	/* text-orientation: mixed; */
+	writing-mode: vertical-rl;
+	-ms-writing-mode: tb-rl;
+}
+@media (min-width:767px){
+	.grid{/* トップページ作品陳列１：１：１ */
+		display: grid;
+		margin-left: 5%;
+		margin-right: 5%;
+		gap:10%;
+		grid-template-columns:1fr 1fr 1fr;
+	}
+
+	.gird-item{/* 作品陳列 */
+		width:100%;
+		text-align:center;
+		margin:40px;
+	}
+}
+.imgs{/* 作品サムネサイズ */
+	width:95%;
+	margin-bottom:10%;
+}
+.black-box{
+		width:350px;
+		height:530px;
+		padding-top:25px;
+		text-align:center;
+		border:0.5px solid rgb(0,0,0);/* 枠線 */
+		background-color: rgb(0,0,0);/* 透明度入れた箱の色 */
+		box-shadow: 15px 15px 30px 10px rgba(0,0,0,0.4);/* 水平　垂直　ぼかし具合　広がり具合 */
+	}
+.card-txt{
+	color:rgb(255,255,255);
+	text-align:left;
+	margin-left:5%;
+	font-size: 18px;
+	font-family: "ヒラギノ明朝 Pro";
+	line-height: 2.0;/* 行間 */
+}
+@media (max-width:766px){/* 作品陳列　パソコン用を消す　スマホ */
+	.grid{
+		display: grid;
+		grid-template-columns:1fr 1fr;
+		margin-left: 5%;
+		margin-right: 5%;
+		gap:8%;
+	}
+	.gird-item{/* 作品陳列 */
+		width:100%;
+	}
+	.black-box{
+		width:150px;
+		height:250px;
+		padding-top:10px;
+		box-shadow: 5px 5px 10px 5px rgba(0,0,0,0.3);/* 水平　垂直　ぼかし具合　広がり具合 */
+	}
+	.card-txt{
+		font-size: 13px;
+		line-height: 1.6;/* 行間 */
+}
+}
+
