--- a/sample/css/main.css
+++ b/sample/css/main.css
@@ -88,16 +88,27 @@
 		border-right: 39px solid #f6da69;
 		text-align:bottom;
 	}
+
 }
 
 .section-bottom{
 	margin-bottom:200px;
 }
-
-
+.pages-section-bottom{
+	padding-top:10%;
+	padding-bottom:10%;
+	margin-right:1%;
+	margin-left:1%;
+	border-top:2px solid rgb(0,0,0);
+}
 
 .txt{
 	font-family: "ヒラギノ明朝 Pro";
+	font-size:20px;
+}
+.txt-ex{
+	font-family: "ヒラギノ明朝 Pro";
+	font-size:25px;
 }
 .right{
 	margin-right:10%;
@@ -107,33 +118,65 @@
 }
 .txt-top{
 	color:rgb(255,255,255);
-	font-size: 24px;
+	font-size: 45px;
 	font-family: "ヒラギノ明朝 Pro";
+	justify-content: flex-end;
+	margin-left:30%;
+	margin-right:30%;
+	margin-top:50%;
+
 }
+
 .top-menu{
 	float: left;
 	width: 20%;
+	text-align:center;
 }
 .black-top{
-	width:100%;
+	/* width:100%; */
 	height:auto;
 	background-color: rgb(0,0,0);
 }
 .img-top{
 	width:80%;
 }
-.imgs{
-	width:100%;
+.margins{
+	margin-right:10%;
+	margin-left:10%;
 }
+
 .bag-jpg{
 	float: left;
-	width: 40%;
+	width: 30%;
 	margin-right:10px;
 }
-.bag-jpg-center{
-	position: absolute;
-	/* height: 50px;
-	width: 200px; */
-	/* top: 50%; */
-	transform: translateY(-50%);
+.bag-work{
+	margin-bottom:20%;
+}
+
+.pages-grid{
+	display: grid;
+	grid-template-columns:1fr 1fr;
+	gap:3%;
+	margin-bottom:3%;
+}
+.pages-grid-item{
+	width:100%;
+}
+@media (max-width:766px){/* 作品陳列　パソコン用を消す　スマホ */
+	.txt-top{
+		font-size:18px;
+		margin-top:30%;
+	}
+	.txt-ex{
+		font-size:15px;
+	}
+	.txt{
+		font-size:13px;
+	}
+	.pages-grid{
+		grid-template-columns:1fr;
+		margin-bottom:8%;
+	}
+
 }
