--- a/sample/css/main.css
+++ b/sample/css/main.css
@@ -94,12 +94,20 @@
 .section-bottom{
 	margin-bottom:200px;
 }
+
+.pages-top-bottom{
+	padding-top:1%;
+	padding-bottom:8%;
+}
 .pages-section-bottom{
 	padding-top:18%;
 	padding-bottom:18%;
 	margin-right:1%;
 	margin-left:1%;
 	border-top:2px solid rgb(0,0,0);
+}
+.pages-h1-top{
+	margin-top:15%;
 }
 .pages-h1-bottom{
 	margin-bottom:10%;
@@ -141,18 +149,30 @@
 
 }
 
-.top-menu{
+/* .top-menu{
 	float: left;
 	width: 20%;
 	text-align:center;
-}
+} */
 .black-top{
 	/* width:100%; */
 	height:auto;
 	background-color: rgb(0,0,0);
 }
-.img-top{
+.img-80{
 	width:80%;
+	margin-bottom:60px;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+.img-60{
+	width:60%;
+	margin-bottom:60px;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+.top-name-center{
+	text-align: center;
 }
 .margins{
 	margin-right:10%;
@@ -161,12 +181,45 @@
 .img{
 	width:100%;
 }
+.topic{/* 左側のプロセスとかの上に余白 */
+	margin-top:15%;
+}
 
+.s-line{
+	margin-bottom:20px;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+.p-line{
+	margin-bottom:60px;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+
+/* ボード */
+.board-JPG{
+	width:60%;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+.board-work{
+	margin-bottom:50%;
+}
+
+
+
+/* バッグ */
 .bag-jpg{
 	float: left;
-	width: 30%;
+	width: 60%;
 	margin-right:10px;
 }
+.bag-work{
+	margin-bottom:40%;
+}
+
+
+/* 東山 */
 .higashiyama-jpg{
 	float: right;
 	width: 30%;
@@ -177,15 +230,16 @@
 .higashiyama-box{
 	border:2px dashed #ffa64d;
 }
-.bag-work{
+.higashiyama-work{
 	margin-bottom:20%;
 }
+
 
 .pages-grid{
 	display: grid;
 	grid-template-columns:1fr 1fr;
 	gap:3%;
-	margin-bottom:3%;
+	margin-bottom:10%;
 }
 .pages-grid-item{
 	width:100%;
@@ -205,6 +259,9 @@
 	}
 	.txt{
 		font-size:13px;
+	}
+	.p-line{
+		margin-bottom:30px;
 	}
 	.pages-grid{
 		grid-template-columns:1fr;
