--- a/sample/css/main.css
+++ b/sample/css/main.css
@@ -48,7 +48,7 @@
 	margin-left:5%;
 	font-size: 18px;
 	font-family: "ヒラギノ明朝 Pro";
-	line-height: 2.0;/* 行間 */
+	line-height: 2.3;/* 行間 */
 }
 .triangle{
 	border-top: 62px solid transparent;
@@ -249,6 +249,73 @@
 .pamph-work-top{
 	margin-top:20%;
 }
+
+
+.sample ul{
+	display: flex;
+	overflow-x: scroll;
+	margin: 0;
+	padding: 0;
+}
+.sample li{
+	min-width: 40%;
+	margin: 10px;
+	padding: 0;
+	list-style: none;
+}
+
+
+/*==================================================
+スライダーのためのcss
+===================================*/
+.slider {/*横幅94%で左右に余白を持たせて中央寄せ*/
+	width:70%;
+	margin:0 auto;
+}
+
+.slider img {
+	width:100%;/*スライダー内の画像を横幅100%に*/
+	height:auto;
+}
+
+/*slickのJSで書かれるタグ内、スライド左右の余白調整*/
+
+.slider .slick-slide {
+	margin:0 10px;
+}
+
+/*矢印の設定*/
+
+/*戻る、次へ矢印の位置*/
+
+/*ドットナビゲーションの設定*/
+
+.slick-dots {
+	text-align:center;
+	margin:20px 0 0 0;
+}
+
+.slick-dots li {
+	display:inline-block;
+	margin:0 5px;
+}
+
+.slick-dots button {
+	color: transparent;
+	outline: none;
+	width:10px;/*ドットボタンのサイズ*/
+	height:10px;/*ドットボタンのサイズ*/
+	display:block;
+	border-radius:50%;
+	background:#ccc;/*ドットボタンの色*/
+}
+
+.slick-dots .slick-active button{
+	background:#333;/*ドットボタンの現在地表示の色*/
+}
+
+
+
 
 
 .pages-grid{
