--- a/sample/css/main.css
+++ b/sample/css/main.css
@@ -15,6 +15,33 @@
 .mini-box{
 	border-top:13px solid rgb(0,0,0);
 }
+
+
+.box17{
+    margin:2em 0;
+    position: relative;
+    padding: 0.5em 1.5em;
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+}
+.box17:before, .box17:after{
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 2px;
+    height: -webkit-calc(100% + 20px);
+    height: calc(100% + 20px);
+    background-color: black;
+}
+.box17:before {left: 10px;}
+.box17:after {right: 10px;}
+.box17 p {
+    margin: 0; 
+    padding: 0;
+}
+
+
+
 @media (min-width:767px){
 	.grid{/* トップページ作品陳列１：１：１ */
 		display: grid;
@@ -31,12 +58,12 @@
 	}
 }
 .imgs{/* 作品サムネサイズ */
-	width:95%;
+	width:93%;
 	margin-bottom:10%;
 }
 .black-box{
-		width:350px;
-		height:530px;
+		width:20vw;
+		height:32vw;
 		padding-top:25px;
 		text-align:center;
 		background-color: rgb(0,0,0);
@@ -54,6 +81,10 @@
 	border-top: 62px solid transparent;
 	border-right: 62px solid #f6da69;
 	margin-bottom:0;
+}
+
+.hyper{
+	margin-bottom:100vw;
 }
 @media (max-width:766px){/* 作品陳列　パソコン用を消す　スマホ */
 	.menu{
@@ -88,11 +119,18 @@
 		border-right: 39px solid #f6da69;
 		text-align:bottom;
 	}
+	.hyper{
+		margin-bottom:180vw;
+	}
 
 }
 
 .section-bottom{
 	margin-bottom:200px;
+}
+
+.section-top{
+	margin-top:200px;
 }
 
 .pages-top-bottom{
@@ -251,6 +289,14 @@
 }
 
 
+#flipbook {
+	width: 100%; /* flipbook自体の横幅なので各ページは200px */
+	height: 28vw;
+	/* margin: 10% 20%;  */
+	/* 一番左端だとたまに見切れるので適当に移動 */
+  }
+
+
 .sample ul{
 	display: flex;
 	overflow-x: scroll;
@@ -264,6 +310,19 @@
 	list-style: none;
 }
 
+
+.persona-box{
+		padding: 1.5em 0.5em;
+		margin: 2em 0;
+		color: #232323;
+		background: rgb(250,249,250);
+		border-left: solid 50px rgb(100,100,100);
+	}
+	/* .persona-box p {
+		margin: 0; 
+		padding: 0;
+	}
+} */
 
 /*==================================================
 スライダーのためのcss
@@ -287,6 +346,27 @@
 /*矢印の設定*/
 
 /*戻る、次へ矢印の位置*/
+.slick-prev,
+.slick-next {
+	position: absolute;/*絶対配置にする*/
+	top: 42%;
+	cursor: pointer;/*マウスカーソルを指マークに*/
+	outline: none;/*クリックをしたら出てくる枠線を消す*/
+	border-top: 2px solid rgb(0, 0, 0);/*矢印の色*/
+	border-right: 2px solid rgb(0, 0, 0);/*矢印の色*/
+	height: 15px;
+	width: 15px;
+}
+
+.slick-prev {/*戻る矢印の位置と形状*/
+	left: -1.5%;
+	transform: rotate(-135deg);
+}
+
+.slick-next {/*次へ矢印の位置と形状*/
+	right: -1.5%;
+	transform: rotate(45deg);
+}
 
 /*ドットナビゲーションの設定*/
 
